<resources>
    <string name="app_name">Proyecto</string>
    <string name="txt_name">Nombre completo</string>
    <string name="txt_email">Email</string>
    <string name="txt_pass">Contraseña</string>
    <string name="btn_acceder">Acceder</string>
    <string name="btn_iniciar">Iniciar sesión</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_salir">Salir</string>
    <string name="title_home">Inicio</string>
    <string name="title_cuenta">Mi cuenta</string>
    <string name="title_mapa">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subir_publicacion">Subir publicacion</string>
    <string name="mis_publicaciones">Mis publicaciones</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>