<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/img" />



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/txt_name" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/txt_email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/editTextPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/txt_pass"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnCategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/link"
                        android:text="Servicios"
                        android:textColor="@color/white" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:stretchColumns="1">

                        <TableRow>

                            <Button
                                android:id="@+id/btnRegistrar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:backgroundTint="@color/link"
                                android:text="@string/btn_registrar"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/btnAcceder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/btn_acceder"
                                android:textColor="@color/link" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </ScrollView>



    </LinearLayout>

</FrameLayout>